<resources>
    <string name="app_name">ChicoChenJavaProject</string>


    <string name="main_tab_open">开源</string>
    <string name="main_tab_widget">组件</string>
    <string name="main_tab_feature">功能</string>

    <string name="address_book">通讯录</string>
    <string name="save">保存</string>
    <string name="update">更新</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="name">姓名</string>
    <string name="mobile">电话</string>

    <string name="poigram">Poigram</string>
    <string name="snowbean">Snowbean</string>

    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>

    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>

</resources>
