<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textColor="#111111"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center|left"
            android:textColor="#111111"
            android:textColorHint="#aaaaaa"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mobile"
            android:textColor="#111111"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center|left"
            android:textColor="#111111"
            android:textColorHint="#aaaaaa"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sex"
            android:textColor="#111111"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_sex"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center|left"
            android:textColor="#111111"
            android:textColorHint="#aaaaaa"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/age"
            android:textColor="#111111"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center|left"
            android:textColor="#111111"
            android:textColorHint="#aaaaaa"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_press"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_margin="30dp"/>

</LinearLayout>